# simple_proxy

./: .pre-commit-config.yaml  .srl  Cargo.toml  LICENSE  Makefile  README.md
docs/: tls_certificates.md
examples/: server.rs  test.rest
fixtures/: sample.yaml  sample.yml
fixtures/certs/: README.md  backend.crt  backend.key  ca.crt  ca.key  ca.srl  proxy.crt  proxy.key  sample.crt  sample.key
scripts/: generate_certs.sh
specs/: 001-example-server.md  002-generate-cert.md  README.md
src/: lib.rs  main.rs
src/conf/: mod.rs  raw.rs  resolved.rs
src/proxy/: health.rs  mod.rs  route.rs  simple_proxy.rs  utils.rs
