[package]
name = "simple_proxy"
version = "0.1.0"
authors = ["wty92911 <2066946886@qq.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
description = """

"""
readme = "README.md"
categories = ["development-tools"]
keywords = []

[dependencies]
argon2 = "0.5"
async-trait="0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
pingora = { version = "0.4", features = [ "lb" ] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
sfv = "^0.10"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
